<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pomometer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="project_list_title">Project List</string>
    <string name="project_list_button_new">New Project</string>
    
    <string name="add_a_goal">Enter a goal</string>
    <string name="add_a_duration">Enter a duration</string>
    
    <string name="start_pomodoro">Start Pomodoro</string>
    
    <string name="duration_length_header">Duration Length</string>
    <string name="length_measurement">(in minutes)</string>
    
    <string name="alert_type_header">Alert Type</string>
    
    <string name="vibration_length_header">Vibration Length</string>
	<string name="vibration_length_subheader">(in seconds)</string>
	
	<string name="options_button_name">Save Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="complete_button">Complete</string>

    <string name="enter_notes">Notes:</string>
    
    <string-array name="alert_types">
        <item>Ring</item>
        <item>Vibrate</item>
        <item>Ring+Vibrate</item>
        <item>Silent</item>
    </string-array>
    
    <string name="temporary_to_be_replaced">Temp</string>
    
    <string name="no_projects">There are no Projects at this time.</string>
    <string name="no_tasks">There are no Tasks for this project</string>
    <string name="no_results">There are no Results for this Task.</string>
    
    <string name="task_list_title">Task List</string>
    <string name="result_list_title">Result List</string>
    
    <string name="enter_a_goal">You must enter a goal!</string>
    
    <!-- JSON Strings -->
    <string name="json_project_list">http://pomometer.herokuapp.com/projects.json</string>
    <string name="json_task_list">http://pomometer.herokuapp.com/projects/<!-- + project_id + ".json" --></string>
    <string name="json_result_list">http://pomometer.herokuapp.com/tasks/<!-- + task_id + ".json" --></string>
    <string name="json_upload_result">http://pomometer.herokuapp.com/results.json</string>
</resources>