<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:padding="12dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/duration_length_header"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="12dip"
        android:text="@string/length_measurement"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small" />
    
    <EditText
        android:id="@+id/duration_length"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/white_text"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium" >
 
        <requestFocus />  
    </EditText>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/alert_type_header"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium" />

    <Spinner
        android:id="@+id/alert_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="12dip"
        android:text="@string/vibration_length_header"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="12dip"
        android:text="@string/vibration_length_subheader"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small" />
   
    <EditText
        android:id="@+id/alert_length"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/white_text"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium" >
 
    </EditText>
    
    <TextView
        android:paddingTop="12dip" 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <Button
     	android:id="@+id/btn_finish_dialog"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/options_button_name"
     	android:layout_gravity="center_horizontal"
     	android:onClick="finishDialog" />

</LinearLayout>