<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:padding="12dip" >
    
    <TextView  
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/duration_length_header"
    	android:gravity="center_horizontal"
    	android:textSize="@dimen/font_medium"
    	android:textColor="@color/black" />
    
    <TextView  
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/length_measurement"
    	android:gravity="center_horizontal"
    	android:textSize="@dimen/font_small"
    	android:textColor="@color/black"
    	android:paddingBottom="12dip" />
    
    <EditText 
        android:id="@+id/duration_length"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white_text"
        android:textSize="@dimen/font_medium"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:inputType="number"
        android:gravity="center_horizontal" > 
        <requestFocus />  
    </EditText>
    
    <TextView  
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/break_length_header"
    	android:gravity="center_horizontal"
    	android:textSize="@dimen/font_medium"
    	android:textColor="@color/black"
    	android:paddingTop="12dip" />
    
     <TextView  
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/length_measurement"
    	android:gravity="center_horizontal"
    	android:textSize="@dimen/font_small"
    	android:textColor="@color/black"
    	android:paddingBottom="12dip" />
   
    
    <EditText 
        android:id="@+id/break_length"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white_text"
        android:textSize="@dimen/font_medium"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:inputType="number"
        android:gravity="center_horizontal" > 
    </EditText>
    
    <TextView
        android:paddingTop="12dip" 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <Button
     	android:id="@+id/btn_finish_dialog"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/options_button_name"
     	android:layout_gravity="center_horizontal"
     	android:onClick="finishDialog" />

</LinearLayout>